--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </h5>
       <img src="./Images/u_padova.jpg" class="logo">
       <h4>Department of Psychology</h4>
-      <p><b>Relevant Coursework:</b> Psychobiology, Neuropsychology, Evaluation and Treatment of Cognitive Disorders, Psychophysiology, Experimental Psychology, Psychometrics, Programming (Java and MATLAB).</p>
+      <p><b>Relevant Coursework:</b> Psychobiology, Neuropsychology, Developmental Psychology, Evaluation and Treatment of Cognitive Disorders, Psychophysiology, Experimental Psychology, Psychometrics, Programming (Java and MATLAB).</p>
       <p><b>Final Grade:</b>106/110</p>
     </div>
     </div>
@@ -355,18 +355,13 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/DkXj-unh6iU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div> 
-  
-  <div class="video">
-    <div class="video-responsive">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/zYEDf8QvEH0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div> 
-  </div>
 
-  <div class="video">
-    <div class="video-responsive">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/5E_6zp67Blc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="video">
+      <div class="video-responsive">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/42ABkmPOasA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div> 
     </div>
-  </div>
+
 </div>
 </section>
 
