--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <p>Experienced research assistant in Cognitive Science, Psychology, and Psychiatry. </p>
             </div>
               <div class="col-md-4 text-center">
-                <img src="pic.jpg" alt="Giulia" width="246" height="246">
+                <img src="profile_pic.jpg" alt="Giulia" width="246" height="246">
               </div>
               <div class="col-md-4">
                 <h3>Info</h3>
